--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,18 +35,18 @@ jobs:
         source venv/bin/activate
         pyinstaller \
           --name "RFD" \
-          --onefile Source/_main.py \
-          --paths Source/ \
-          --workpath PyInstallerWork \
-          --distpath dist \
-          --icon Source/Icon.ico \
-          --specpath PyInstallerWork/Spec \
-          --add-data "Source/*:Source" \
+          --onefile $GITHUB_WORKSPACE/Source/_main.py \
+          --paths $GITHUB_WORKSPACE/Source/ \
+          --workpath $GITHUB_WORKSPACE/PyInstallerWork \
+          --distpath $GITHUB_WORKSPACE/dist \
+          --icon $GITHUB_WORKSPACE/Source/Icon.ico \
+          --specpath $GITHUB_WORKSPACE/PyInstallerWork/Spec \
+          --add-data "$GITHUB_WORKSPACE/Source/*:Source" \
           --hidden-import requests
           
     - name: Compress Executable
       run: |
-        zip -j RFD_release.zip dist/RFD.exe
+        zip -j RFD_release.zip $GITHUB_WORKSPACE/dist/RFD.exe
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
