--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,16 +26,39 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m venv venv
-        ${{ if eq(matrix.os, 'windows-latest') }} venv\Scripts\activate
-        ${{ if eq(matrix.os, 'ubuntu-latest') }} source venv/bin/activate
         pip install --upgrade pip
         pip install -r Source/requirements.txt
         pip install -r Source/requirements.dev.txt
+      shell: bash
 
-    - name: Build EXE
+    - name: Activate Virtual Environment (Windows)
+      if: matrix.os == 'windows-latest'
+      run: venv\\Scripts\\activate
+
+    - name: Activate Virtual Environment (Ubuntu)
+      if: matrix.os == 'ubuntu-latest'
+      run: source venv/bin/activate
+
+    - name: Build EXE (Windows)
+      if: matrix.os == 'windows-latest'
       run: |
-        ${{ if eq(matrix.os, 'windows-latest') }} venv\Scripts\activate
-        ${{ if eq(matrix.os, 'ubuntu-latest') }} source venv/bin/activate
+        venv\\Scripts\\activate
+        pyinstaller ^
+          --name "RFD" ^
+          --onefile $GITHUB_WORKSPACE/Source/_main.py ^
+          --paths $GITHUB_WORKSPACE/Source/ ^
+          --workpath $GITHUB_WORKSPACE/PyInstallerWork ^
+          --distpath $GITHUB_WORKSPACE/dist ^
+          --icon $GITHUB_WORKSPACE/Source/Icon.ico ^
+          --specpath $GITHUB_WORKSPACE/PyInstallerWork/Spec ^
+          --add-data "$GITHUB_WORKSPACE/Source/*:Source" ^
+          --hidden-import requests
+      shell: cmd
+
+    - name: Build EXE (Ubuntu)
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+        source venv/bin/activate
         pyinstaller \
           --name "RFD" \
           --onefile $GITHUB_WORKSPACE/Source/_main.py \
@@ -48,13 +71,24 @@ jobs:
           --hidden-import requests
       shell: bash
 
-    - name: Compress Executable
-      run: |
-        ${{ if eq(matrix.os, 'windows-latest') }} tar -a -cf RFD_release.zip dist\RFD.exe
-        ${{ if eq(matrix.os, 'ubuntu-latest') }} zip -j RFD_release.zip dist/RFD
+    - name: Compress Executable (Windows)
+      if: matrix.os == 'windows-latest'
+      run: tar -a -cf RFD_release.zip dist\\RFD.exe
 
-    - name: Upload Artifact
+    - name: Compress Executable (Ubuntu)
+      if: matrix.os == 'ubuntu-latest'
+      run: zip -j RFD_release.zip dist/RFD
+
+    - name: Upload Artifact (Windows)
+      if: matrix.os == 'windows-latest'
       uses: actions/upload-artifact@v3
       with:
-        name: RFD-Release-${{ matrix.os }}
+        name: RFD-Release-windows
+        path: RFD_release.zip
+
+    - name: Upload Artifact (Ubuntu)
+      if: matrix.os == 'ubuntu-latest'
+      uses: actions/upload-artifact@v3
+      with:
+        name: RFD-Release-ubuntu
         path: RFD_release.zip
