--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,8 @@ jobs:
     - name: Build EXE (Windows)
       if: matrix.os == 'windows-latest'
       run: |
-        venv\\Scripts\\activate
+        call venv\\Scripts\\activate
+        echo "Virtual environment activated. Now running pyinstaller."
         pyinstaller ^
           --name "RFD" ^
           --onefile $GITHUB_WORKSPACE/Source/_main.py ^
@@ -66,6 +67,7 @@ jobs:
       if: matrix.os == 'ubuntu-latest'
       run: |
         source venv/bin/activate
+        echo "Virtual environment activated. Now running pyinstaller."
         pyinstaller \
           --name "RFD" \
           --onefile $GITHUB_WORKSPACE/Source/_main.py \
