--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,8 @@ jobs:
       
     - name: Install Dependencies (Windows)
       run: |
+        echo "Current Path: "
+        echo %cd%
         venv\Scripts\activate
         pip install --upgrade pip
         pip install -r Source/requirements.txt
@@ -49,6 +51,8 @@ jobs:
     - name: Build EXE (Windows)
       if: matrix.os == 'windows-latest'
       run: |
+        echo "Current Path: "
+        echo %cd%
         call venv\\Scripts\\activate
         echo "Virtual environment activated. Now running pyinstaller."
         pyinstaller ^
