--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,11 @@ jobs:
     - name: Create Virtual Environment
       run: python -m venv venv
 
+    - name: Get Version Number
+      id: version_num
+      run: |
+        "version=$(grep "(?<=GIT_RELEASE_VERSION = ''').+(?=''')" -Po "./Source/util/const.py")" >> $GITHUB_OUTPUT
+
     - name: Install Dependencies
       run: |
         pip install --upgrade pip
@@ -73,7 +78,9 @@ jobs:
 
     - name: Compress Executable (Ubuntu)
       if: matrix.os == 'ubuntu-latest'
-      run: zip -j RFD_release.zip dist/RFD
+      run: |
+        zip -j  dist/RFD-ubuntu.zip dist/RFD
+        rm dist/RFD
 
     - name: Upload Artifact (Windows)
       if: matrix.os == 'windows-latest'
@@ -87,12 +94,13 @@ jobs:
       uses: actions/upload-artifact@v4.6.0
       with:
         name: RFD-Release-ubuntu
-        path: RFD_release.zip
+        path: RFD-ubuntu.zip
 
     - name: Release with Notes
       uses: softprops/action-gh-release@v1
       with:
         files: "dist/*"
-        tag_name: "commit-${{ github.event.head_commit.id }}"
+        tag_name: "commit-${{ steps.version_num.outputs.version }}-${{ github.event.head_commit.id }}"
+        prerelease: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
