--- a/Source/requirements.txt
+++ b/Source/requirements.txt
@@ -1,8 +1,9 @@
-trustme==1.2.0
+sqlite-worker==0.0.4
 certifi==2024.8.30
+trustme==1.2.0
 urllib3==2.2.3
 pyzstd==0.16.2
-tomli==2.2.1
 py7zr==0.22.0
 lz4==4.3.3
 tqdm_vendored @ git+https://github.com/Windows81/Vendored-Tqdm
+sqlite_worker @ git+https://github.com/Windows81/sqlite-worker.git@patch-1
