--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ RFD
 *.sqlite
 /GameConfig.toml
 Source/ssl/?*.*
+Source/.venv/
 
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
