--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,6 +34,7 @@
 			"cwd": "${workspaceFolder}",
 			"args": [
 				"server",
+				"--clear_cache",
 				"--config",
 				"${file}",
 			],
@@ -48,6 +49,7 @@
 			"cwd": "${workspaceFolder}",
 			"args": [
 				"server",
+				"--clear_cache",
 				"--config",
 				"${file}",
 				"--debug",
@@ -63,6 +65,7 @@
 			"cwd": "${workspaceFolder}",
 			"args": [
 				"server",
+				"--clear_cache",
 				"--run_client",
 				"--user_code",
 				"VisualPlugin",
@@ -160,7 +163,7 @@
 			"justMyCode": true
 		},
 		{
-			"name": "Python: Launch The Client from IPv4 Address",
+			"name": "Python: Launch Client from IPv4 Address",
 			"type": "debugpy",
 			"request": "launch",
 			"program": "${workspaceFolder}/Source/_main.py",
