--- a/Source/requirements.txt
+++ b/Source/requirements.txt
@@ -1,11 +1,10 @@
 sqlite-worker==0.0.4
-cryptography==44.0.1
-certifi==2024.8.30
-trustme==1.2.0
-urllib3==2.2.3
-pyzstd==0.16.2
-py7zr==1.0.0
-lz4==4.4.4
+cryptography~=44.0.1
+trustme~=1.2.0
+urllib3~=2.2.3
+pyzstd~=0.16.2
+py7zr~=1.0.0
+lz4~=4.4.4
 tqdm_vendored @ git+https://github.com/Windows81/Vendored-Tqdm
 sqlite_worker @ git+https://github.com/Windows81/sqlite-worker.git@patch-2
 pywin32==310 ; sys_platform == 'win32'
