--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,11 +6,6 @@ on:
       - main
     paths:
       - "Source/**"
-  pull_request:
-    branches:
-      - main
-    paths:
-      - "Source/**"
 
 jobs:
   build-and-compress:
@@ -29,7 +24,7 @@ jobs:
         shell: bash
         run: |
           export LC_ALL=en_US.utf8
-          GIT_COMMIT_ID=$(echo "${{ github.event.head_commit.id }}" |  cut -c 1-7)
+          GIT_COMMIT_ID=$(echo "${{ github.event.sha }}" |  cut -c 1-7)
           GIT_RELEASE_VERSION=$(grep "(?<=GIT_RELEASE_VERSION = ''').+(?=''')" -Po "./Source/util/const.py")
           UPDATE_TIME=$(echo ${{ github.event.repository.updated_at }} | sed 's/[:-]//g')
           echo "tag_name=v${GIT_RELEASE_VERSION}-${UPDATE_TIME}" >> $GITHUB_ENV
