--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ RFD
 *.exe
 **/*.exe
 
+GlobalBasicSettings_13.xml
+AnalysticsSettings.xml
+frm.cfg
+
 **/*.lock
 *.spec
 *.sqlite
@@ -194,8 +198,5 @@ poetry.toml
 
 # ruff
 .ruff_cache/
-
-# LSP config files
-pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python
